--- a/style.css
+++ b/style.css
@@ -98,14 +98,14 @@ h3 {
   color: rgba(255, 252, 232, 1);
 }
 
-div.links {
+/* div.links {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   padding: 1em 0 0 0;
   gap: 30px;
-}
+} */
 
 div.getintouch {
   padding: 1.5em 0 0 0;
@@ -147,10 +147,10 @@ div.photo {
   transform: translate(-50%, -50%); /* Center the photo using transform */
 }
 
-div.photo img {
+/* div.photo img {
   height: 100%;
   width: 100%;
-}
+} */
 
 .aboutme {
   margin-top: auto;
@@ -200,6 +200,7 @@ h2 {
 
 .timeline {
   max-width: 34.15em;
+  padding-bottom: 5%;
 }
 
 .checkpoint {
@@ -272,34 +273,130 @@ h2 {
   right: -0.5em;
 }
 
-.svg-container {
+.logo-container {
   display: flex;
   flex-direction: row;
-  gap: 150px;
+  gap: 10%;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 5%;
 }
 
-.svg-container svg {
-  width: 6rem;
-  height: 6rem;
+.logo-container img {
+  max-width: 100px;
+  max-height: 100px;
+  width: 100px;
+  height: auto;
+  object-fit: contain;
+  padding-bottom: 5%;
   transition: transform 0.3s ease;
-  flex-basis: calc(12% - 30px); /* Adjust the space between items as needed */
+  flex-basis: calc(12% - 30px);
 }
 
-.svg-container svg:hover {
+.logo-container img:hover {
   transform: scale(1.5);
 }
 
-.svg-container object {
-  width: 6rem;
-  height: 6rem;
-  transition: transform 0.3s ease;
-  flex-basis: calc(12% - 30px); /* Adjust the space between items as needed */
+.logo-container img:hover {
+  transform: scale(1.5);
 }
 
-.svg-container object:hover {
-  transform: scale(1.5);
+/* Works */
+.portfolio .content {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.portfolio .content span {
+  display: inline;
+  color: rgba(25, 10, 0, 1);
+  font-size: 4em;
+  font-family: Carme, sans-serif;
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: rgba(255, 132, 12, 1);
+  letter-spacing: 0.05em;
+}
+
+.portfolio span {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  color: rgba(25, 10, 0, 1);
+  font-size: 4em;
+  font-family: Carme, sans-serif;
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: rgba(255, 132, 12, 1);
+  letter-spacing: 0.05em;
+}
+
+.portfolio .content p {
+  font-size: 1.2em;
+  text-align: center;
+  max-width: 80%;
+  color: rgba(255, 252, 232, 1);
+}
+
+.redirects {
+  display: flex;
+  flex-direction: column;
+  gap: 5%;
+  padding: 5%;
+  align-items: center;
+}
+
+.works img {
+  position: relative;
+  display: inline-block;
+  height: 50%;
+  width: 50%;
+  padding: 2%;
+}
+
+.works {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10%;
+}
+
+.works img:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.works img:hover {
+  transform: scale(1.05);
+}
+.tools {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tools img {
+  max-width: 100px;
+  max-height: 100px;
+  height: auto;
+  width: 100px;
+  padding-bottom: 5%;
+}
+
+.todoapp {
+  max-width: 25%;
+  height: auto;
+  width: 100px;
 }
 
 /* responsive timeline */
