--- a/style.css
+++ b/style.css
@@ -513,6 +513,7 @@ button {
   cursor: pointer;
   transition: background-color 0.3s;
   font-size: 1.3em;
+  margin-top: 1em;
 }
 
 button:hover {
@@ -729,6 +730,7 @@ button:hover {
 
   button {
     font-size: 1em;
+    margin-top: 1em;
   }
 }
 
@@ -818,5 +820,15 @@ button:hover {
   input[type="email"],
   textarea {
     font-size: 1.2em;
+  }
+
+  .checkpoint div {
+    border: 1px solid #fff;
+    border-radius: 1em;
+    padding: 1em;
+  }
+
+  h2 {
+    font-size: 1.3em;
   }
 }
