--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ div.title {
   width: 90%;
 }
 
-div.title p {
+div.title h1 {
   display: block;
   margin: -10px 0 10px 0;
   color: transparent;
@@ -153,7 +153,7 @@ div.title p {
   filter: drop-shadow(0 0 5px rgba(255, 132, 12, 0.3));
 }
 
-h4 {
+div.title h2 {
   display: inline-block;
   font-size: 2.5em;
   color: rgba(255, 252, 232, 0.6);
@@ -245,7 +245,7 @@ h2 {
   color: rgba(255, 252, 232, 1);
 }
 
-.title p {
+.title h1 {
   color: rgba(255, 252, 232, 1);
   font-size: 1.3em;
   letter-spacing: 2px;
@@ -722,7 +722,7 @@ button:hover {
 
 /* Media query for screens smaller than 768px */
 @media (max-width: 768px) {
-  div.title p {
+  div.title h1 {
     font-size: 4.5em;
   }
 
@@ -740,7 +740,7 @@ button:hover {
     height: 30px;
   }
 
-  h4 {
+  div.title h2 {
     margin: 0;
     font-size: 2em;
   }
