--- a/style.css
+++ b/style.css
@@ -448,11 +448,10 @@ h2 {
   position: absolute;
   width: 20px;
   height: 20px;
-  right: -10px;
+  right: -14px;
   background-color: rgba(25, 10, 0, 1);
   border: 4px solid rgba(255, 132, 12, 1);
-  top: 50%;
-  transform: translateY(-50%);
+  top: 20px;
   border-radius: 50%;
   z-index: 1;
   transition: all 0.3s ease;
@@ -465,7 +464,7 @@ h2 {
 }
 
 .checkpoint:nth-child(even)::after {
-  left: -10px;
+  left: -14px;
 }
 
 .checkpoint:hover::after {
@@ -484,28 +483,26 @@ h2 {
   content: " ";
   height: 0;
   position: absolute;
-  top: 50%;
+  top: 24px;
   width: 0;
   z-index: 1;
   right: -10px;
   border: medium solid rgba(255, 255, 255, 0.1);
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent rgba(255, 255, 255, 0.1);
-  transform: translateY(-50%);
 }
 
 .checkpoint:nth-child(even) div::before {
   content: " ";
   height: 0;
   position: absolute;
-  top: 50%;
+  top: 24px;
   width: 0;
   z-index: 1;
   left: -10px;
   border: medium solid rgba(255, 255, 255, 0.1);
   border-width: 10px 10px 10px 0;
   border-color: transparent rgba(255, 255, 255, 0.1) transparent transparent;
-  transform: translateY(-50%);
 }
 
 .logo-container {
